Эти изменения с ошибкой

--- a/file.html
+++ b/file.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container text-center">
   <img src="12.jpg" alt="На рабочем месте" />
-  <h1>Захарова Софья</h1>
+  <h1>Эти изменения с ошибкой</h1>
   <h2>Инженер по тестированию</h2>
     <table class="table table-sm">
       <thead class="table-light">
